--- a/index.html
+++ b/index.html
@@ -1,11 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=\, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;500;600;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <h1>Hammaga salom!</h1>
+
+
+    <header>
+        <nav class="container">
+            <img src="" alt="">
+            <ul>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+            </ul>
+        </nav>
+        <section class="container">
+            <img src="" alt="">
+            <div class="header__info">
+                <h1 class="header__title"></h1>
+                <p class="header__subtitle"></p>
+            </div>
+        </section>
+    </header>
+    <main>
+        <section>
+            <div class="left"></div>
+            <div class="right"></div>
+        </section>
+        <section>
+            <div class="left"></div>
+            <div class="right"></div>
+        </section>
+        <section>
+            <div class="left"></div>
+            <div class="right"></div>
+        </section>
+        <section>
+            <div class="left"></div>
+            <div class="right"></div>
+        </section>
+        <section>
+            <div class="left"></div>
+            <div class="right"></div>
+        </section>
+        <section>
+            <div class="left"></div>
+            <div class="right"></div>
+        </section>
+    </main>
+
+    <footer>
+        <ul>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
+    </footer>
+
+    <script src="js/main.js"></script>
 </body>
+
 </html>
